// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`optimization > optimize 'emojis' [ '😀😃😄😁', '😆🥹😅😂', '🤣🥲☺️😊', '😇🙂🙃😉' ] > No optimization 1`] = `
"😀,(000c.0)😃,(0014.0)😄,(001c.0)😁,(0024.0)⏎          > 😀😃😄😁
😆,(0025.0)🥹,(002d.0)😅,(0035.0)😂,(003d.0)⏎          > 😆🥹😅😂
😇,(005d.0)🙂,(0065.0)🙃,(006d.0)😉,(0075.0)⏎          > 😇🙂🙃😉
🤣,(0040.0)🥲,(0048.0)☺,(004e.0)️,(0054.0)😊,(005c.0)⏎ > 🤣🥲☺️😊"
`;

exports[`optimization > optimize 'emojis' [ '😀😃😄😁', '😆🥹😅😂', '🤣🥲☺️😊', '😇🙂🙃😉' ] > With optimization 1`] = `
"😀,(0019.0)😃,(0011.0)😄,(0009.0)😁,(0002.0)⏎          > 😀😃😄😁
😆,(0031.0)🥹,(0029.0)😅,(0021.0)😂,(0002.0)⏎          > 😆🥹😅😂
😇,(0049.0)🙂,(0041.0)🙃,(0039.0)😉,(0002.0)⏎          > 😇🙂🙃😉
🤣,(0069.0)🥲,(0061.0)☺,(005b.0)️,(0055.0)😊,(0002.0)⏎ > 🤣🥲☺️😊"
`;

exports[`optimization > optimize 'emojis' [ '😀😃😄😁', '😆🥹😅😂', '🤣🥲☺️😊', '😇🙂🙃😉' ] > With optimization and string table 1`] = `
"😀,(0004.0)😃,(0004.4)😄,(0004.8)😁,(0003.0)⏎          > 😀😃😄😁
😆,(0006.0)🥹,(0006.4)😅,(0006.8)😂,(0003.0)⏎          > 😆🥹😅😂
😇,(0008.0)🙂,(0008.4)🙃,(0008.8)😉,(0003.0)⏎          > 😇🙂🙃😉
🤣,(000e.1)🥲,(000e.5)☺,(000e.8)️,(000e.b)😊,(0003.0)⏎ > 🤣🥲☺️😊"
`;

exports[`optimization > optimize 'multiple words shared endings' [ 'optimization', 'vacation', 'sensation' ] > No optimization 1`] = `
"o,(0005.0)p,(0007.0)t,(0009.0)i,(000b.0)m,(000d.0)i,(000f.0)z,(0011.0)a,(0013.0)t,(0015.0)i,(0017.0)o,(0019.0)n,(0004.0)⏎ > optimization
s,(0029.0)e,(002b.0)n,(002d.0)s,(002f.0)a,(0031.0)t,(0033.0)i,(0035.0)o,(0037.0)n,(0004.0)⏎                               > sensation
v,(001b.0)a,(001d.0)c,(001f.0)a,(0021.0)t,(0023.0)i,(0025.0)o,(0027.0)n,(0004.0)⏎                                         > vacation"
`;

exports[`optimization > optimize 'multiple words shared endings' [ 'optimization', 'vacation', 'sensation' ] > With optimization 1`] = `
"o,(0019.0)p,(0017.0)t,(0015.0)i,(0013.0)m,(0011.0)i,(000f.0)z,(000d.0)a,(000b.0)t,(0009.0)i,(0007.0)o,(0005.0)n,(0004.0)⏎ > optimization
s,(001f.0)e,(001d.0)n,(001b.0)s,(000d.0)a,(000b.0)t,(0009.0)i,(0007.0)o,(0005.0)n,(0004.0)⏎                               > sensation
v,(0023.0)a,(0021.0)c,(000d.0)a,(000b.0)t,(0009.0)i,(0007.0)o,(0005.0)n,(0004.0)⏎                                         > vacation"
`;

exports[`optimization > optimize 'multiple words shared endings' [ 'optimization', 'vacation', 'sensation' ] > With optimization and string table 1`] = `
"o,(0006.0)p,(0006.1)t,(0006.2)i,(0006.3)m,(0006.4)i,(0006.5)z,(0005.0)a,(0005.1)t,(0005.2)i,(0005.3)o,(0005.4)n,(0005.5)⏎ > optimization
s,(0008.0)e,(0008.1)n,(0008.2)s,(0005.0)a,(0005.1)t,(0005.2)i,(0005.3)o,(0005.4)n,(0005.5)⏎                               > sensation
v,(000a.0)a,(000a.1)c,(0005.0)a,(0005.1)t,(0005.2)i,(0005.3)o,(0005.4)n,(0005.5)⏎                                         > vacation"
`;

exports[`optimization > optimize 'multiple words' [ 'optimization', 'optimize' ] > No optimization 1`] = `
"o,(0003.0)p,(0005.0)t,(0007.0)i,(0009.0)m,(000b.0)i,(000d.0)z,(000f.0)a,(0012.0)t,(0014.0)i,(0016.0)o,(0018.0)n,(0002.0)⏎ > optimization
----------------------------------------------------------------------e,(0002.0)⏎                                         > optimize"
`;

exports[`optimization > optimize 'multiple words' [ 'optimization', 'optimize' ] > With optimization 1`] = `
"o,(0018.0)p,(0016.0)t,(0014.0)i,(0012.0)m,(0010.0)i,(000e.0)z,(000b.0)a,(0009.0)t,(0007.0)i,(0005.0)o,(0003.0)n,(0002.0)⏎ > optimization
----------------------------------------------------------------------e,(0002.0)⏎                                         > optimize"
`;

exports[`optimization > optimize 'multiple words' [ 'optimization', 'optimize' ] > With optimization and string table 1`] = `
"o,(0000.1)p,(0000.2)t,(0000.3)i,(0000.4)m,(0000.5)i,(0000.6)z,(0000.7)a,(0004.0)t,(0004.1)i,(0004.2)o,(0004.3)n,(0003.0)⏎ > optimization
----------------------------------------------------------------------e,(0003.0)⏎                                         > optimize"
`;

exports[`optimization > optimize 'sampleWords()' [ 'Here', 'are', 'a', 'few', 'words', 'to', 'use', 'as', 'a', …(91) ] > No optimization 1`] = `
"A,(052d.0)B,(052f.0)C,(0531.0)D,(0533.0)E,(0535.0)F,(0537.0)G,(0539.0)H,(0022.0)⏎                                                                                                                                           > ABCDEFGH
H,(0023.0)e,(0025.0)r,(0027.0)e,(0022.0)⏎                                                                                                                                                                                   > Here
I,(053b.0)J,(053d.0)K,(053f.0)L,(0541.0)M,(0543.0)N,(0545.0)O,(0547.0)P,(0022.0)⏎                                                                                                                                           > IJKLMNOP
Q,(0549.0)R,(054b.0)S,(054d.0)T,(054f.0)U,(0551.0)V,(0553.0)W,(0555.0)X,(0022.0)⏎                                                                                                                                           > QRSTUVWX
T,(005a.0)h,(005c.0)e,(005e.0)y,(0022.0)⏎                                                                                                                                                                                   > They
Y,(0557.0)Z,(0022.0)⏎                                                                                                                                                                                                       > YZ
^,(0022.0)⏎                                                                                                                                                                                                                 > ^
\`,(0022.0)⏎                                                                                                                                                                                                                 > \`
a,(0029.0)⏎                                                                                                                                                                                                                 > a
----------b,(0559.0)c,(055b.0)d,(055d.0)e,(055f.0)f,(0561.0)g,(0563.0)h,(0022.0)⏎                                                                                                                                           > abcdefgh
----------n,(00d6.0)d,(0022.0)⏎                                                                                                                                                                                             > and
----------r,(002e.0)e,(0022.0)⏎                                                                                                                                                                                             > are
----------s,(0022.0)⏎                                                                                                                                                                                                       > as
b,(006c.0)e,(0022.0)⏎                                                                                                                                                                                                       > be
----------l,(00af.0)u,(00b1.0)e,(0022.0)⏎                                                                                                                                                                                   > blue
c,(00d8.0)s,(00da.0)p,(00dc.0)e,(00de.0)l,(00e0.0)l,(0022.0)⏎                                                                                                                                                               > cspell
d,(0046.0)a,(00d1.0)r,(00d4.0)k,(0022.0)⏎                                                                                                                                                                                   > dark
--------------------y,(0022.0)⏎                                                                                                                                                                                             > day
----------i,(0049.0)c,(004c.0)t,(004e.0)i,(0050.0)o,(0052.0)n,(0054.0)a,(0056.0)r,(0058.0)y,(0022.0)⏎                                                                                                                       > dictionary
--------------------s,(00e2.0)a,(00e4.0)b,(00e6.0)l,(00e8.0)e,(0022.0)⏎                                                                                                                                                     > disable
e,(0523.0)n,(0525.0)a,(0527.0)b,(0529.0)l,(052b.0)e,(0022.0)⏎                                                                                                                                                               > enable
f,(0030.0)e,(0033.0)w,(0022.0)⏎                                                                                                                                                                                             > few
----------i,(00cb.0)r,(00cd.0)s,(00cf.0)t,(0022.0)⏎                                                                                                                                                                         > first
g,(00a7.0)r,(00a9.0)e,(00ab.0)e,(00ad.0)n,(0022.0)⏎                                                                                                                                                                         > green
i,(0565.0)j,(0567.0)k,(0569.0)l,(056b.0)m,(056d.0)n,(056f.0)o,(0571.0)p,(0022.0)⏎                                                                                                                                           > ijklmnop
j,(0060.0)u,(0062.0)s,(0064.0)t,(0022.0)⏎                                                                                                                                                                                   > just
n,(0066.0)e,(0068.0)e,(006a.0)d,(0022.0)⏎                                                                                                                                                                                   > need
o,(00bd.0)f,(0022.0)⏎                                                                                                                                                                                                       > of
----------n,(0022.0)⏎                                                                                                                                                                                                       > on
----------r,(00c1.0)a,(00c3.0)n,(00c5.0)g,(00c7.0)e,(0022.0)⏎                                                                                                                                                               > orange
p,(0093.0)l,(0095.0)a,(0097.0)y,(0099.0)⏎                                                                                                                                                                                   > play
----------------------------------------e,(009c.0)d,(0022.0)⏎                                                                                                                                                               > played
--------------------------------------------------r,(0022.0)⏎                                                                                                                                                               > player
----------------------------------------i,(009f.0)n,(00a1.0)g,(0022.0)⏎                                                                                                                                                     > playing
q,(0573.0)r,(0575.0)s,(0577.0)t,(0579.0)u,(057b.0)v,(057d.0)w,(057f.0)x,(0581.0)ἀ,(0022.0)⏎                                                                                                                                 > qrstuvwxἀ
r,(00a3.0)e,(00a5.0)d,(0022.0)⏎                                                                                                                                                                                             > red
s,(006f.0)p,(0071.0)l,(0073.0)i,(0075.0)t,(0022.0)⏎                                                                                                                                                                         > split
t,(003e.0)a,(0085.0)l,(0087.0)k,(0089.0)⏎                                                                                                                                                                                   > talk
----------------------------------------e,(008c.0)d,(0022.0)⏎                                                                                                                                                               > talked
--------------------------------------------------r,(0022.0)⏎                                                                                                                                                               > talker
----------------------------------------i,(008f.0)n,(0091.0)g,(0022.0)⏎                                                                                                                                                     > talking
----------h,(00c9.0)e,(0022.0)⏎                                                                                                                                                                                             > the
----------o,(0022.0)⏎                                                                                                                                                                                                       > to
u,(0042.0)s,(0044.0)e,(0022.0)⏎                                                                                                                                                                                             > use
w,(0035.0)a,(0077.0)l,(0079.0)k,(007b.0)⏎                                                                                                                                                                                   > walk
----------------------------------------e,(007e.0)d,(0022.0)⏎                                                                                                                                                               > walked
--------------------------------------------------r,(0022.0)⏎                                                                                                                                                               > walker
----------------------------------------i,(0081.0)n,(0083.0)g,(0022.0)⏎                                                                                                                                                     > walking
----------o,(0038.0)r,(003a.0)d,(003c.0)s,(0022.0)⏎                                                                                                                                                                         > words
y,(00b3.0)e,(00b5.0)l,(00b7.0)l,(00b9.0)o,(00bb.0)w,(0022.0)⏎                                                                                                                                                               > yellow
Έ,(09b8.0)Ὴ,(09be.0)Ή,(09c2.0)ῌ,(09c8.0)῍,(09ce.0)῎,(09d4.0)῏,(09da.0)ῐ,(0022.0)⏎                                                                                                                                           > ΈῊΉῌ῍῎῏ῐ
ά,(07e6.0)ὲ,(07ec.0)έ,(07f0.0)ὴ,(07f6.0)ή,(07fa.0)ὶ,(0800.0)ί,(0804.0)ὸ,(0022.0)⏎                                                                                                                                           > άὲέὴήὶίὸ
ό,(080c.0)ὺ,(0812.0)ύ,(0816.0)ὼ,(081c.0)ώ,(0820.0)὾,(0826.0)὿,(082c.0)ᾀ,(0022.0)⏎                                                                                                                                           > όὺύὼώ὾὿ᾀ
ພ,(011f.0)າ,(0125.0)ສ,(012b.0)າ,(0131.0)ລ,(0137.0)າ,(013d.0)ວ,(0022.0)⏎                                                                                                                                                     > ພາສາລາວ
ት,(00f5.0)ግ,(00fb.0)ር,(0101.0)ኛ,(0022.0)⏎                                                                                                                                                                                   > ትግርኛ
አ,(0109.0)ማ,(010f.0)ር,(0115.0)ኛ,(0022.0)⏎                                                                                                                                                                                   > አማርኛ
ᐃ,(015c.0)ᓄ,(0162.0)ᒃ,(0168.0)ᑎ,(016e.0)ᑐ,(0174.0)ᑦ,(0022.0)⏎                                                                                                                                                               > ᐃᓄᒃᑎᑐᑦ
ᐊ,(017a.0)ᓂ,(0180.0)ᔑ,(0186.0)ᓈ,(018c.0)ᐯ,(0192.0)ᒧ,(0198.0)ᐎ,(019e.0)ᓐ,(0022.0)⏎                                                                                                                                           > ᐊᓂᔑᓈᐯᒧᐎᓐ
ᓀ,(01a6.0)ᐦ,(01ac.0)ᐃ,(01b2.0)ᔭ,(01b8.0)ᐍ,(01be.0)ᐏ,(01c4.0)ᐣ,(0022.0)⏎                                                                                                                                                     > ᓀᐦᐃᔭᐍᐏᐣ
ἁ,(0590.0)ἂ,(0596.0)ἃ,(059c.0)ἄ,(05a2.0)ἅ,(05a8.0)ἆ,(05ae.0)ἇ,(05b4.0)Ἀ,(0022.0)⏎                                                                                                                                           > ἁἂἃἄἅἆἇἈ
Ἁ,(05ba.0)Ἂ,(05c0.0)Ἃ,(05c6.0)Ἄ,(05cc.0)Ἅ,(05d2.0)Ἆ,(05d8.0)Ἇ,(05de.0)ἐ,(0022.0)⏎                                                                                                                                           > ἉἊἋἌἍἎἏἐ
ἑ,(05e4.0)ἒ,(05ea.0)ἓ,(05f0.0)ἔ,(05f6.0)ἕ,(05fc.0)἖,(0602.0)἗,(0608.0)Ἐ,(0022.0)⏎                                                                                                                                           > ἑἒἓἔἕ἖἗Ἐ
Ἑ,(060e.0)Ἒ,(0614.0)Ἓ,(061a.0)Ἔ,(0620.0)Ἕ,(0626.0)἞,(062c.0)἟,(0632.0)ἠ,(0022.0)⏎                                                                                                                                           > ἙἚἛἜἝ἞἟ἠ
ἡ,(0638.0)ἢ,(063e.0)ἣ,(0644.0)ἤ,(064a.0)ἥ,(0650.0)ἦ,(0656.0)ἧ,(065c.0)Ἠ,(0022.0)⏎                                                                                                                                           > ἡἢἣἤἥἦἧἨ
Ἡ,(0662.0)Ἢ,(0668.0)Ἣ,(066e.0)Ἤ,(0674.0)Ἥ,(067a.0)Ἦ,(0680.0)Ἧ,(0686.0)ἰ,(0022.0)⏎                                                                                                                                           > ἩἪἫἬἭἮἯἰ
ἱ,(068c.0)ἲ,(0692.0)ἳ,(0698.0)ἴ,(069e.0)ἵ,(06a4.0)ἶ,(06aa.0)ἷ,(06b0.0)Ἰ,(0022.0)⏎                                                                                                                                           > ἱἲἳἴἵἶἷἸ
Ἱ,(06b6.0)Ἲ,(06bc.0)Ἳ,(06c2.0)Ἴ,(06c8.0)Ἵ,(06ce.0)Ἶ,(06d4.0)Ἷ,(06da.0)ὀ,(0022.0)⏎                                                                                                                                           > ἹἺἻἼἽἾἿὀ
ὁ,(06e7.0)ὂ,(06ed.0)ὃ,(06f3.0)ὄ,(06f9.0)ὅ,(06ff.0)὆,(0705.0)὇,(070b.0)Ὀ,(0022.0)⏎                                                                                                                                           > ὁὂὃὄὅ὆὇Ὀ
Ὁ,(0711.0)Ὂ,(0717.0)Ὃ,(071d.0)Ὄ,(0723.0)Ὅ,(0729.0)὎,(072f.0)὏,(0735.0)ὐ,(0022.0)⏎                                                                                                                                           > ὉὊὋὌὍ὎὏ὐ
ὑ,(073b.0)ὒ,(0741.0)ὓ,(0747.0)ὔ,(074d.0)ὕ,(0753.0)ὖ,(0759.0)ὗ,(075f.0)὘,(0022.0)⏎                                                                                                                                           > ὑὒὓὔὕὖὗ὘
Ὑ,(0765.0)὚,(076b.0)Ὓ,(0771.0)὜,(0777.0)Ὕ,(077d.0)὞,(0783.0)Ὗ,(0789.0)ὠ,(0022.0)⏎                                                                                                                                           > Ὑ὚Ὓ὜Ὕ὞Ὗὠ
ὡ,(078f.0)ὢ,(0795.0)ὣ,(079b.0)ὤ,(07a1.0)ὥ,(07a7.0)ὦ,(07ad.0)ὧ,(07b3.0)Ὠ,(0022.0)⏎                                                                                                                                           > ὡὢὣὤὥὦὧὨ
Ὡ,(07b9.0)Ὢ,(07bf.0)Ὣ,(07c5.0)Ὤ,(07cb.0)Ὥ,(07d1.0)Ὦ,(07d7.0)Ὧ,(07dd.0)ὰ,(0022.0)⏎                                                                                                                                           > ὩὪὫὬὭὮὯὰ
ᾁ,(083b.0)ᾂ,(0841.0)ᾃ,(0847.0)ᾄ,(084d.0)ᾅ,(0853.0)ᾆ,(0859.0)ᾇ,(085f.0)ᾈ,(0022.0)⏎                                                                                                                                           > ᾁᾂᾃᾄᾅᾆᾇᾈ
ᾉ,(0865.0)ᾊ,(086b.0)ᾋ,(0871.0)ᾌ,(0877.0)ᾍ,(087d.0)ᾎ,(0883.0)ᾏ,(0889.0)ᾐ,(0022.0)⏎                                                                                                                                           > ᾉᾊᾋᾌᾍᾎᾏᾐ
ᾑ,(088f.0)ᾒ,(0895.0)ᾓ,(089b.0)ᾔ,(08a1.0)ᾕ,(08a7.0)ᾖ,(08ad.0)ᾗ,(08b3.0)ᾘ,(0022.0)⏎                                                                                                                                           > ᾑᾒᾓᾔᾕᾖᾗᾘ
ᾙ,(08b9.0)ᾚ,(08bf.0)ᾛ,(08c5.0)ᾜ,(08cb.0)ᾝ,(08d1.0)ᾞ,(08d7.0)ᾟ,(08dd.0)ᾠ,(0022.0)⏎                                                                                                                                           > ᾙᾚᾛᾜᾝᾞᾟᾠ
ᾡ,(08e3.0)ᾢ,(08e9.0)ᾣ,(08ef.0)ᾤ,(08f5.0)ᾥ,(08fb.0)ᾦ,(0901.0)ᾧ,(0907.0)ᾨ,(0022.0)⏎                                                                                                                                           > ᾡᾢᾣᾤᾥᾦᾧᾨ
ᾩ,(090d.0)ᾪ,(0913.0)ᾫ,(0919.0)ᾬ,(091f.0)ᾭ,(0925.0)ᾮ,(092b.0)ᾯ,(0931.0)ᾰ,(0022.0)⏎                                                                                                                                           > ᾩᾪᾫᾬᾭᾮᾯᾰ
ᾱ,(0937.0)ᾲ,(093d.0)ᾳ,(0943.0)ᾴ,(0949.0)᾵,(094f.0)ᾶ,(0955.0)ᾷ,(095b.0)Ᾰ,(0022.0)⏎                                                                                                                                           > ᾱᾲᾳᾴ᾵ᾶᾷᾸ
Ᾱ,(0961.0)Ὰ,(0967.0)Ά,(096b.0)ᾼ,(0971.0)᾽,(0977.0)ι,(097b.0)᾿,(0981.0)῀,(0022.0)⏎                                                                                                                                           > ᾹᾺΆᾼ᾽ι᾿῀
῁,(098e.0)ῂ,(0994.0)ῃ,(099a.0)ῄ,(09a0.0)῅,(09a6.0)ῆ,(09ac.0)ῇ,(09b2.0)Ὲ,(0022.0)⏎                                                                                                                                           > ῁ῂῃῄ῅ῆῇῈ
ῑ,(09e0.0)ῒ,(09e6.0)ΐ,(09ea.0)῔,(09f0.0)῕,(09f6.0)ῖ,(09fc.0)ῗ,(0a02.0)Ῐ,(0022.0)⏎                                                                                                                                           > ῑῒΐ῔῕ῖῗῘ
Ῑ,(0a08.0)Ὶ,(0a0e.0)Ί,(0a12.0)῜,(0a18.0)῝,(0a1e.0)῞,(0a24.0)῟,(0a2a.0)ῠ,(0022.0)⏎                                                                                                                                           > ῙῚΊ῜῝῞῟ῠ
ῡ,(0a30.0)ῢ,(0a36.0)ΰ,(0a3a.0)ῤ,(0a40.0)ῥ,(0a46.0)ῦ,(0a4c.0)ῧ,(0a52.0)Ῠ,(0022.0)⏎                                                                                                                                           > ῡῢΰῤῥῦῧῨ
Ῡ,(0a58.0)Ὺ,(0a5e.0)Ύ,(0a62.0)Ῥ,(0a68.0)῭,(0a6e.0)΅,(0a72.0)\`,(0a74.0)῰,(0022.0)⏎                                                                                                                                           > ῩῪΎῬ῭΅\`῰
῱,(0a7a.0)ῲ,(0a80.0)ῳ,(0a86.0)ῴ,(0a8c.0)῵,(0a92.0)ῶ,(0a98.0)ῷ,(0a9e.0)Ὸ,(0022.0)⏎                                                                                                                                           > ῱ῲῳῴ῵ῶῷῸ
ꦧ,(0147.0)ꦱ,(014d.0)ꦗ,(0153.0)ꦮ,(0022.0)⏎                                                                                                                                                                                   > ꦧꦱꦗꦮ
😀,(01d5.0)😃,(01dd.0)😄,(01e5.0)😁,(01ed.0)😆,(01f5.0)🥹,(01fd.0)😅,(0205.0)😂,(020d.0)🤣,(0215.0)🥲,(021d.0)☺,(0223.0)️,(0229.0)😊,(0231.0)😇,(0239.0)🙂,(0241.0)🙃,(0249.0)😉,(0251.0)⏎                                  > 😀😃😄😁😆🥹😅😂🤣🥲☺️😊😇🙂🙃😉
😌,(0252.0)😍,(025a.0)🥰,(0262.0)😘,(026a.0)😗,(0272.0)😙,(027a.0)😚,(0282.0)😋,(028a.0)😛,(0292.0)😝,(029a.0)😜,(02a2.0)🤪,(02aa.0)🤨,(02b2.0)🧐,(02ba.0)🤓,(02c2.0)😎,(02ca.0)⏎                                           > 😌😍🥰😘😗😙😚😋😛😝😜🤪🤨🧐🤓😎
😢,(034a.0)😭,(0352.0)😤,(035a.0)😠,(0362.0)😡,(036a.0)🤬,(0372.0)🤯,(037a.0)😳,(0382.0)🥵,(038a.0)🥶,(0392.0)😶,(039a.0)‍,(03a0.0)🌫,(03a8.0)️,(03ae.0)😱,(03b6.0)😨,(03be.0)😰,(03c6.0)😥,(03ce.0)😓,(03d6.0)⏎            > 😢😭😤😠😡🤬🤯😳🥵🥶😶‍🌫️😱😨😰😥😓
🙄,(0455.0)😯,(045d.0)😦,(0465.0)😧,(046d.0)😮,(0475.0)😲,(047d.0)🥱,(0485.0)😴,(048d.0)🤤,(0495.0)😪,(049d.0)😮,(04a5.0)‍,(04ab.0)💨,(04b3.0)😵,(04bb.0)😵,(04c3.0)‍,(04c9.0)💫,(04d1.0)🤐,(04d9.0)🥴,(04e1.0)🤢,(04e9.0)⏎ > 🙄😯😦😧😮😲🥱😴🤤😪😮‍💨😵😵‍💫🤐🥴🤢
🤗,(03da.0)🤔,(03e2.0)🫣,(03ea.0)🤭,(03f2.0)🫢,(03fa.0)🫡,(0402.0)🤫,(040a.0)🫠,(0412.0)🤥,(041a.0)😶,(0422.0)🫥,(042a.0)😐,(0432.0)🫤,(043a.0)😑,(0442.0)🫨,(044a.0)😬,(0452.0)⏎                                           > 🤗🤔🫣🤭🫢🫡🤫🫠🤥😶🫥😐🫤😑🫨😬
🤮,(04ea.0)🤧,(04f2.0)😷,(04fa.0)🤒,(0502.0)🤕,(050a.0)🤑,(0512.0)🤠,(051a.0)😈,(0522.0)⏎                                                                                                                                   > 🤮🤧😷🤒🤕🤑🤠😈
🥸,(02cd.0)🤩,(02d5.0)🥳,(02dd.0)😏,(02e5.0)😒,(02ed.0)😞,(02f5.0)😔,(02fd.0)😟,(0305.0)😕,(030d.0)🙁,(0315.0)☹,(031b.0)️,(0321.0)😣,(0329.0)😖,(0331.0)😫,(0339.0)😩,(0341.0)🥺,(0349.0)⏎                                  > 🥸🤩🥳😏😒😞😔😟😕🙁☹️😣😖😫😩🥺"
`;

exports[`optimization > optimize 'sampleWords()' [ 'Here', 'are', 'a', 'few', 'words', 'to', 'use', 'as', 'a', …(91) ] > With optimization 1`] = `
"A,(002f.0)B,(002d.0)C,(002b.0)D,(0029.0)E,(0027.0)F,(0025.0)G,(0023.0)H,(0022.0)⏎                                                                                                                                           > ABCDEFGH
H,(0035.0)e,(0033.0)r,(0031.0)e,(0022.0)⏎                                                                                                                                                                                   > Here
I,(0043.0)J,(0041.0)K,(003f.0)L,(003d.0)M,(003b.0)N,(0039.0)O,(0037.0)P,(0022.0)⏎                                                                                                                                           > IJKLMNOP
Q,(0051.0)R,(004f.0)S,(004d.0)T,(004b.0)U,(0049.0)V,(0047.0)W,(0045.0)X,(0022.0)⏎                                                                                                                                           > QRSTUVWX
T,(0057.0)h,(0055.0)e,(0053.0)y,(0022.0)⏎                                                                                                                                                                                   > They
Y,(0059.0)Z,(0022.0)⏎                                                                                                                                                                                                       > YZ
^,(0022.0)⏎                                                                                                                                                                                                                 > ^
\`,(0022.0)⏎                                                                                                                                                                                                                 > \`
a,(0069.0)⏎                                                                                                                                                                                                                 > a
----------b,(0065.0)c,(0063.0)d,(0061.0)e,(005f.0)f,(005d.0)g,(005b.0)h,(0022.0)⏎                                                                                                                                           > abcdefgh
----------n,(0067.0)d,(0022.0)⏎                                                                                                                                                                                             > and
----------r,(0031.0)e,(0022.0)⏎                                                                                                                                                                                             > are
----------s,(0022.0)⏎                                                                                                                                                                                                       > as
b,(0070.0)e,(0022.0)⏎                                                                                                                                                                                                       > be
----------l,(006e.0)u,(0031.0)e,(0022.0)⏎                                                                                                                                                                                   > blue
c,(007b.0)s,(0079.0)p,(0077.0)e,(0075.0)l,(0073.0)l,(0022.0)⏎                                                                                                                                                               > cspell
d,(0097.0)a,(007f.0)r,(007d.0)k,(0022.0)⏎                                                                                                                                                                                   > dark
--------------------y,(0022.0)⏎                                                                                                                                                                                             > day
----------i,(0094.0)c,(008c.0)t,(008a.0)i,(0088.0)o,(0086.0)n,(0084.0)a,(0082.0)r,(0053.0)y,(0022.0)⏎                                                                                                                       > dictionary
--------------------s,(0092.0)a,(0090.0)b,(008e.0)l,(0031.0)e,(0022.0)⏎                                                                                                                                                     > disable
e,(009a.0)n,(0092.0)a,(0090.0)b,(008e.0)l,(0031.0)e,(0022.0)⏎                                                                                                                                                               > enable
f,(00a4.0)e,(009c.0)w,(0022.0)⏎                                                                                                                                                                                             > few
----------i,(00a2.0)r,(00a0.0)s,(009e.0)t,(0022.0)⏎                                                                                                                                                                         > first
g,(00ad.0)r,(00ab.0)e,(00a9.0)e,(00a7.0)n,(0022.0)⏎                                                                                                                                                                         > green
i,(00bb.0)j,(00b9.0)k,(00b7.0)l,(00b5.0)m,(00b3.0)n,(00b1.0)o,(00af.0)p,(0022.0)⏎                                                                                                                                           > ijklmnop
j,(00bd.0)u,(00a0.0)s,(009e.0)t,(0022.0)⏎                                                                                                                                                                                   > just
n,(00c1.0)e,(00bf.0)e,(0067.0)d,(0022.0)⏎                                                                                                                                                                                   > need
o,(00c9.0)f,(0022.0)⏎                                                                                                                                                                                                       > of
----------n,(0022.0)⏎                                                                                                                                                                                                       > on
----------r,(00c7.0)a,(00c5.0)n,(00c3.0)g,(0031.0)e,(0022.0)⏎                                                                                                                                                               > orange
p,(00db.0)l,(00d9.0)a,(00d7.0)y,(00d4.0)⏎                                                                                                                                                                                   > play
----------------------------------------e,(00cd.0)d,(0022.0)⏎                                                                                                                                                               > played
--------------------------------------------------r,(0022.0)⏎                                                                                                                                                               > player
----------------------------------------i,(00d2.0)n,(00d0.0)g,(0022.0)⏎                                                                                                                                                     > playing
q,(00ef.0)r,(00ed.0)s,(00eb.0)t,(00e9.0)u,(00e7.0)v,(00e5.0)w,(00e3.0)x,(00e1.0)ἀ,(0022.0)⏎                                                                                                                                 > qrstuvwxἀ
r,(00bf.0)e,(0067.0)d,(0022.0)⏎                                                                                                                                                                                             > red
s,(00f5.0)p,(00f3.0)l,(00f1.0)i,(009e.0)t,(0022.0)⏎                                                                                                                                                                         > split
t,(00fb.0)a,(00f9.0)l,(00f7.0)k,(00d4.0)⏎                                                                                                                                                                                   > talk
----------------------------------------e,(00cd.0)d,(0022.0)⏎                                                                                                                                                               > talked
--------------------------------------------------r,(0022.0)⏎                                                                                                                                                               > talker
----------------------------------------i,(00d2.0)n,(00d0.0)g,(0022.0)⏎                                                                                                                                                     > talking
----------h,(0031.0)e,(0022.0)⏎                                                                                                                                                                                             > the
----------o,(0022.0)⏎                                                                                                                                                                                                       > to
u,(00ff.0)s,(0031.0)e,(0022.0)⏎                                                                                                                                                                                             > use
w,(0107.0)a,(00f9.0)l,(00f7.0)k,(00d4.0)⏎                                                                                                                                                                                   > walk
----------------------------------------e,(00cd.0)d,(0022.0)⏎                                                                                                                                                               > walked
--------------------------------------------------r,(0022.0)⏎                                                                                                                                                               > walker
----------------------------------------i,(00d2.0)n,(00d0.0)g,(0022.0)⏎                                                                                                                                                     > walking
----------o,(0105.0)r,(0103.0)d,(0101.0)s,(0022.0)⏎                                                                                                                                                                         > words
y,(0110.0)e,(010e.0)l,(010c.0)l,(010a.0)o,(009c.0)w,(0022.0)⏎                                                                                                                                                               > yellow
Έ,(0138.0)Ὴ,(0132.0)Ή,(012e.0)ῌ,(0128.0)῍,(0122.0)῎,(011c.0)῏,(0116.0)ῐ,(0022.0)⏎                                                                                                                                           > ΈῊΉῌ῍῎῏ῐ
ά,(015c.0)ὲ,(0156.0)έ,(0152.0)ὴ,(014c.0)ή,(0148.0)ὶ,(0142.0)ί,(013e.0)ὸ,(0022.0)⏎                                                                                                                                           > άὲέὴήὶίὸ
ό,(0183.0)ὺ,(017d.0)ύ,(0179.0)ὼ,(0173.0)ώ,(016f.0)὾,(0169.0)὿,(0163.0)ᾀ,(0022.0)⏎                                                                                                                                           > όὺύὼώ὾὿ᾀ
ພ,(01a9.0)າ,(01a3.0)ສ,(019d.0)າ,(0197.0)ລ,(0191.0)າ,(018b.0)ວ,(0022.0)⏎                                                                                                                                                     > ພາສາລາວ
ት,(01bf.0)ግ,(01b9.0)ር,(01b3.0)ኛ,(0022.0)⏎                                                                                                                                                                                   > ትግርኛ
አ,(01c7.0)ማ,(01b9.0)ር,(01b3.0)ኛ,(0022.0)⏎                                                                                                                                                                                   > አማርኛ
ᐃ,(01e7.0)ᓄ,(01e1.0)ᒃ,(01db.0)ᑎ,(01d5.0)ᑐ,(01cf.0)ᑦ,(0022.0)⏎                                                                                                                                                               > ᐃᓄᒃᑎᑐᑦ
ᐊ,(020f.0)ᓂ,(0209.0)ᔑ,(0203.0)ᓈ,(01fd.0)ᐯ,(01f7.0)ᒧ,(01f1.0)ᐎ,(01eb.0)ᓐ,(0022.0)⏎                                                                                                                                           > ᐊᓂᔑᓈᐯᒧᐎᓐ
ᓀ,(0236.0)ᐦ,(0230.0)ᐃ,(022a.0)ᔭ,(0224.0)ᐍ,(021e.0)ᐏ,(0218.0)ᐣ,(0022.0)⏎                                                                                                                                                     > ᓀᐦᐃᔭᐍᐏᐣ
ἁ,(0262.0)ἂ,(025c.0)ἃ,(0256.0)ἄ,(0250.0)ἅ,(024a.0)ἆ,(0244.0)ἇ,(023e.0)Ἀ,(0022.0)⏎                                                                                                                                           > ἁἂἃἄἅἆἇἈ
Ἁ,(028a.0)Ἂ,(0284.0)Ἃ,(027e.0)Ἄ,(0278.0)Ἅ,(0272.0)Ἆ,(026c.0)Ἇ,(0266.0)ἐ,(0022.0)⏎                                                                                                                                           > ἉἊἋἌἍἎἏἐ
ἑ,(02b4.0)ἒ,(02ae.0)ἓ,(02a8.0)ἔ,(02a2.0)ἕ,(029c.0)἖,(0296.0)἗,(0290.0)Ἐ,(0022.0)⏎                                                                                                                                           > ἑἒἓἔἕ἖἗Ἐ
Ἑ,(02de.0)Ἒ,(02d8.0)Ἓ,(02d2.0)Ἔ,(02cc.0)Ἕ,(02c6.0)἞,(02c0.0)἟,(02ba.0)ἠ,(0022.0)⏎                                                                                                                                           > ἙἚἛἜἝ἞἟ἠ
ἡ,(0308.0)ἢ,(0302.0)ἣ,(02fc.0)ἤ,(02f6.0)ἥ,(02f0.0)ἦ,(02ea.0)ἧ,(02e4.0)Ἠ,(0022.0)⏎                                                                                                                                           > ἡἢἣἤἥἦἧἨ
Ἡ,(0332.0)Ἢ,(032c.0)Ἣ,(0326.0)Ἤ,(0320.0)Ἥ,(031a.0)Ἦ,(0314.0)Ἧ,(030e.0)ἰ,(0022.0)⏎                                                                                                                                           > ἩἪἫἬἭἮἯἰ
ἱ,(035a.0)ἲ,(0354.0)ἳ,(034e.0)ἴ,(0348.0)ἵ,(0342.0)ἶ,(033c.0)ἷ,(0336.0)Ἰ,(0022.0)⏎                                                                                                                                           > ἱἲἳἴἵἶἷἸ
Ἱ,(0382.0)Ἲ,(037c.0)Ἳ,(0376.0)Ἴ,(0370.0)Ἵ,(036a.0)Ἶ,(0364.0)Ἷ,(035e.0)ὀ,(0022.0)⏎                                                                                                                                           > ἹἺἻἼἽἾἿὀ
ὁ,(03b3.0)ὂ,(03ad.0)ὃ,(03a7.0)ὄ,(03a1.0)ὅ,(039b.0)὆,(0395.0)὇,(038f.0)Ὀ,(0022.0)⏎                                                                                                                                           > ὁὂὃὄὅ὆὇Ὀ
Ὁ,(03db.0)Ὂ,(03d5.0)Ὃ,(03cf.0)Ὄ,(03c9.0)Ὅ,(03c3.0)὎,(03bd.0)὏,(03b7.0)ὐ,(0022.0)⏎                                                                                                                                           > ὉὊὋὌὍ὎὏ὐ
ὑ,(0403.0)ὒ,(03fd.0)ὓ,(03f7.0)ὔ,(03f1.0)ὕ,(03eb.0)ὖ,(03e5.0)ὗ,(03df.0)὘,(0022.0)⏎                                                                                                                                           > ὑὒὓὔὕὖὗ὘
Ὑ,(042b.0)὚,(0425.0)Ὓ,(041f.0)὜,(0419.0)Ὕ,(0413.0)὞,(040d.0)Ὗ,(0407.0)ὠ,(0022.0)⏎                                                                                                                                           > Ὑ὚Ὓ὜Ὕ὞Ὗὠ
ὡ,(0453.0)ὢ,(044d.0)ὣ,(0447.0)ὤ,(0441.0)ὥ,(043b.0)ὦ,(0435.0)ὧ,(042f.0)Ὠ,(0022.0)⏎                                                                                                                                           > ὡὢὣὤὥὦὧὨ
Ὡ,(047b.0)Ὢ,(0475.0)Ὣ,(046f.0)Ὤ,(0469.0)Ὥ,(0463.0)Ὦ,(045d.0)Ὧ,(0457.0)ὰ,(0022.0)⏎                                                                                                                                           > ὩὪὫὬὭὮὯὰ
ᾁ,(04aa.0)ᾂ,(04a4.0)ᾃ,(049e.0)ᾄ,(0498.0)ᾅ,(0492.0)ᾆ,(048c.0)ᾇ,(0486.0)ᾈ,(0022.0)⏎                                                                                                                                           > ᾁᾂᾃᾄᾅᾆᾇᾈ
ᾉ,(04d2.0)ᾊ,(04cc.0)ᾋ,(04c6.0)ᾌ,(04c0.0)ᾍ,(04ba.0)ᾎ,(04b4.0)ᾏ,(04ae.0)ᾐ,(0022.0)⏎                                                                                                                                           > ᾉᾊᾋᾌᾍᾎᾏᾐ
ᾑ,(04fa.0)ᾒ,(04f4.0)ᾓ,(04ee.0)ᾔ,(04e8.0)ᾕ,(04e2.0)ᾖ,(04dc.0)ᾗ,(04d6.0)ᾘ,(0022.0)⏎                                                                                                                                           > ᾑᾒᾓᾔᾕᾖᾗᾘ
ᾙ,(0522.0)ᾚ,(051c.0)ᾛ,(0516.0)ᾜ,(0510.0)ᾝ,(050a.0)ᾞ,(0504.0)ᾟ,(04fe.0)ᾠ,(0022.0)⏎                                                                                                                                           > ᾙᾚᾛᾜᾝᾞᾟᾠ
ᾡ,(054a.0)ᾢ,(0544.0)ᾣ,(053e.0)ᾤ,(0538.0)ᾥ,(0532.0)ᾦ,(052c.0)ᾧ,(0526.0)ᾨ,(0022.0)⏎                                                                                                                                           > ᾡᾢᾣᾤᾥᾦᾧᾨ
ᾩ,(0572.0)ᾪ,(056c.0)ᾫ,(0566.0)ᾬ,(0560.0)ᾭ,(055a.0)ᾮ,(0554.0)ᾯ,(054e.0)ᾰ,(0022.0)⏎                                                                                                                                           > ᾩᾪᾫᾬᾭᾮᾯᾰ
ᾱ,(059a.0)ᾲ,(0594.0)ᾳ,(058e.0)ᾴ,(0588.0)᾵,(0582.0)ᾶ,(057c.0)ᾷ,(0576.0)Ᾰ,(0022.0)⏎                                                                                                                                           > ᾱᾲᾳᾴ᾵ᾶᾷᾸ
Ᾱ,(05be.0)Ὰ,(05b8.0)Ά,(05b4.0)ᾼ,(05ae.0)᾽,(05a8.0)ι,(05a4.0)᾿,(059e.0)῀,(0022.0)⏎                                                                                                                                           > ᾹᾺΆᾼ᾽ι᾿῀
῁,(05ef.0)ῂ,(05e9.0)ῃ,(05e3.0)ῄ,(05dd.0)῅,(05d7.0)ῆ,(05d1.0)ῇ,(05cb.0)Ὲ,(0022.0)⏎                                                                                                                                           > ῁ῂῃῄ῅ῆῇῈ
ῑ,(0615.0)ῒ,(060f.0)ΐ,(060b.0)῔,(0605.0)῕,(05ff.0)ῖ,(05f9.0)ῗ,(05f3.0)Ῐ,(0022.0)⏎                                                                                                                                           > ῑῒΐ῔῕ῖῗῘ
Ῑ,(063b.0)Ὶ,(0635.0)Ί,(0631.0)῜,(062b.0)῝,(0625.0)῞,(061f.0)῟,(0619.0)ῠ,(0022.0)⏎                                                                                                                                           > ῙῚΊ῜῝῞῟ῠ
ῡ,(0661.0)ῢ,(065b.0)ΰ,(0657.0)ῤ,(0651.0)ῥ,(064b.0)ῦ,(0645.0)ῧ,(063f.0)Ῠ,(0022.0)⏎                                                                                                                                           > ῡῢΰῤῥῦῧῨ
Ῡ,(0681.0)Ὺ,(067b.0)Ύ,(0677.0)Ῥ,(0671.0)῭,(066b.0)΅,(0667.0)\`,(0665.0)῰,(0022.0)⏎                                                                                                                                           > ῩῪΎῬ῭΅\`῰
῱,(06a9.0)ῲ,(06a3.0)ῳ,(069d.0)ῴ,(0697.0)῵,(0691.0)ῶ,(068b.0)ῷ,(0685.0)Ὸ,(0022.0)⏎                                                                                                                                           > ῱ῲῳῴ῵ῶῷῸ
ꦧ,(06cb.0)ꦱ,(06c5.0)ꦗ,(06bf.0)ꦮ,(0022.0)⏎                                                                                                                                                                                   > ꦧꦱꦗꦮ
😀,(074b.0)😃,(0743.0)😄,(073b.0)😁,(0733.0)😆,(072b.0)🥹,(0723.0)😅,(071b.0)😂,(0713.0)🤣,(070b.0)🥲,(0703.0)☺,(06fd.0)️,(06f7.0)😊,(06ef.0)😇,(06e7.0)🙂,(06df.0)🙃,(06d7.0)😉,(0022.0)⏎                                  > 😀😃😄😁😆🥹😅😂🤣🥲☺️😊😇🙂🙃😉
😌,(07c3.0)😍,(07bb.0)🥰,(07b3.0)😘,(07ab.0)😗,(07a3.0)😙,(079b.0)😚,(0793.0)😋,(078b.0)😛,(0783.0)😝,(077b.0)😜,(0773.0)🤪,(076b.0)🤨,(0763.0)🧐,(075b.0)🤓,(0753.0)😎,(0022.0)⏎                                           > 😌😍🥰😘😗😙😚😋😛😝😜🤪🤨🧐🤓😎
😢,(084f.0)😭,(0847.0)😤,(083f.0)😠,(0837.0)😡,(082f.0)🤬,(0827.0)🤯,(081f.0)😳,(0817.0)🥵,(080f.0)🥶,(0807.0)😶,(07ff.0)‍,(07f9.0)🌫,(07f1.0)️,(07eb.0)😱,(07e3.0)😨,(07db.0)😰,(07d3.0)😥,(07cb.0)😓,(0022.0)⏎            > 😢😭😤😠😡🤬🤯😳🥵🥶😶‍🌫️😱😨😰😥😓
🙄,(08e7.0)😯,(08df.0)😦,(08d7.0)😧,(08cf.0)😮,(08c7.0)😲,(08bf.0)🥱,(08b7.0)😴,(08af.0)🤤,(08a7.0)😪,(089f.0)😮,(0897.0)‍,(0891.0)💨,(0889.0)😵,(0881.0)😵,(0879.0)‍,(0873.0)💫,(086b.0)🤐,(0863.0)🥴,(085b.0)🤢,(0022.0)⏎ > 🙄😯😦😧😮😲🥱😴🤤😪😮‍💨😵😵‍💫🤐🥴🤢
🤗,(0961.0)🤔,(0959.0)🫣,(0951.0)🤭,(0949.0)🫢,(0941.0)🫡,(0939.0)🤫,(0931.0)🫠,(0929.0)🤥,(0921.0)😶,(0919.0)🫥,(0911.0)😐,(0909.0)🫤,(0901.0)😑,(08f9.0)🫨,(08f1.0)😬,(0022.0)⏎                                           > 🤗🤔🫣🤭🫢🫡🤫🫠🤥😶🫥😐🫤😑🫨😬
🤮,(0997.0)🤧,(098f.0)😷,(0987.0)🤒,(097f.0)🤕,(0977.0)🤑,(096f.0)🤠,(0967.0)😈,(0022.0)⏎                                                                                                                                   > 🤮🤧😷🤒🤕🤑🤠😈
🥸,(0a16.0)🤩,(0a0e.0)🥳,(0a06.0)😏,(09fe.0)😒,(09f6.0)😞,(09ee.0)😔,(09e6.0)😟,(09de.0)😕,(09d6.0)🙁,(09ce.0)☹,(09c8.0)️,(09c2.0)😣,(09ba.0)😖,(09b2.0)😫,(09aa.0)😩,(09a2.0)🥺,(0022.0)⏎                                  > 🥸🤩🥳😏😒😞😔😟😕🙁☹️😣😖😫😩🥺"
`;

exports[`optimization > optimize 'sampleWords()' [ 'Here', 'are', 'a', 'few', 'words', 'to', 'use', 'as', 'a', …(91) ] > With optimization and string table 1`] = `
"A,(0023.0)B,(0023.1)C,(0023.2)D,(0023.3)E,(0023.4)F,(0023.5)G,(0023.6)H,(0022.0)⏎                                                                                                                                                          > ABCDEFGH
H,(0027.0)e,(0027.1)r,(0025.0)e,(0022.0)⏎                                                                                                                                                                                                  > Here
I,(0029.0)J,(0029.1)K,(0029.2)L,(0029.3)M,(0029.4)N,(0029.5)O,(0029.6)P,(0022.0)⏎                                                                                                                                                          > IJKLMNOP
Q,(002b.0)R,(002b.1)S,(002b.2)T,(002b.3)U,(002b.4)V,(002b.5)W,(002b.6)X,(0022.0)⏎                                                                                                                                                          > QRSTUVWX
T,(002f.0)h,(002f.1)e,(002d.0)y,(0022.0)⏎                                                                                                                                                                                                  > They
Y,(0031.0)Z,(0022.0)⏎                                                                                                                                                                                                                      > YZ
^,(0022.0)⏎                                                                                                                                                                                                                                > ^
\`,(0022.0)⏎                                                                                                                                                                                                                                > \`
a,(0037.0)⏎                                                                                                                                                                                                                                > a
----------b,(0033.0)c,(0033.1)d,(0033.2)e,(0033.3)f,(0033.4)g,(0033.5)h,(0022.0)⏎                                                                                                                                                          > abcdefgh
----------n,(0035.0)d,(0022.0)⏎                                                                                                                                                                                                            > and
----------r,(0025.0)e,(0022.0)⏎                                                                                                                                                                                                            > are
----------s,(0022.0)⏎                                                                                                                                                                                                                      > as
b,(003e.0)e,(0022.0)⏎                                                                                                                                                                                                                      > be
----------l,(003c.0)u,(0025.0)e,(0022.0)⏎                                                                                                                                                                                                  > blue
c,(0041.0)s,(0041.1)p,(0041.2)e,(0041.3)l,(0041.4)l,(0022.0)⏎                                                                                                                                                                              > cspell
d,(004f.0)a,(0045.0)r,(0043.0)k,(0022.0)⏎                                                                                                                                                                                                  > dark
--------------------y,(0022.0)⏎                                                                                                                                                                                                            > day
----------i,(004c.0)c,(0048.0)t,(0048.1)i,(0048.2)o,(0048.3)n,(0048.4)a,(0048.5)r,(002d.0)y,(0022.0)⏎                                                                                                                                      > dictionary
--------------------s,(004a.0)a,(004a.1)b,(004a.2)l,(0025.0)e,(0022.0)⏎                                                                                                                                                                    > disable
e,(0052.0)n,(004a.0)a,(004a.1)b,(004a.2)l,(0025.0)e,(0022.0)⏎                                                                                                                                                                              > enable
f,(005c.0)e,(0054.0)w,(0022.0)⏎                                                                                                                                                                                                            > few
----------i,(005a.0)r,(0058.0)s,(0056.0)t,(0022.0)⏎                                                                                                                                                                                        > first
g,(005f.0)r,(005f.1)e,(005f.2)e,(005f.3)n,(0022.0)⏎                                                                                                                                                                                        > green
i,(0061.0)j,(0061.1)k,(0061.2)l,(0061.3)m,(0061.4)n,(0061.5)o,(0061.6)p,(0022.0)⏎                                                                                                                                                          > ijklmnop
j,(0063.0)u,(0058.0)s,(0056.0)t,(0022.0)⏎                                                                                                                                                                                                  > just
n,(0067.0)e,(0065.0)e,(0035.0)d,(0022.0)⏎                                                                                                                                                                                                  > need
o,(006b.0)f,(0022.0)⏎                                                                                                                                                                                                                      > of
----------n,(0022.0)⏎                                                                                                                                                                                                                      > on
----------r,(0069.0)a,(0069.1)n,(0069.2)g,(0025.0)e,(0022.0)⏎                                                                                                                                                                              > orange
p,(0077.0)l,(0077.1)a,(0077.2)y,(0074.0)⏎                                                                                                                                                                                                  > play
----------------------------------------e,(006f.0)d,(0022.0)⏎                                                                                                                                                                              > played
--------------------------------------------------r,(0022.0)⏎                                                                                                                                                                              > player
----------------------------------------i,(0072.0)n,(0072.1)g,(0022.0)⏎                                                                                                                                                                    > playing
q,(007b.0)r,(007b.1)s,(007b.2)t,(007b.3)u,(007b.4)v,(007b.5)w,(007b.6)x,(007b.7)ἀ,(0022.0)⏎                                                                                                                                                > qrstuvwxἀ
r,(0065.0)e,(0035.0)d,(0022.0)⏎                                                                                                                                                                                                            > red
s,(007d.0)p,(007d.1)l,(007d.2)i,(0056.0)t,(0022.0)⏎                                                                                                                                                                                        > split
t,(0081.0)a,(007f.0)l,(007f.1)k,(0074.0)⏎                                                                                                                                                                                                  > talk
----------------------------------------e,(006f.0)d,(0022.0)⏎                                                                                                                                                                              > talked
--------------------------------------------------r,(0022.0)⏎                                                                                                                                                                              > talker
----------------------------------------i,(0072.0)n,(0072.1)g,(0022.0)⏎                                                                                                                                                                    > talking
----------h,(0025.0)e,(0022.0)⏎                                                                                                                                                                                                            > the
----------o,(0022.0)⏎                                                                                                                                                                                                                      > to
u,(0085.0)s,(0025.0)e,(0022.0)⏎                                                                                                                                                                                                            > use
w,(0089.0)a,(007f.0)l,(007f.1)k,(0074.0)⏎                                                                                                                                                                                                  > walk
----------------------------------------e,(006f.0)d,(0022.0)⏎                                                                                                                                                                              > walked
--------------------------------------------------r,(0022.0)⏎                                                                                                                                                                              > walker
----------------------------------------i,(0072.0)n,(0072.1)g,(0022.0)⏎                                                                                                                                                                    > walking
----------o,(0087.0)r,(0087.1)d,(0087.2)s,(0022.0)⏎                                                                                                                                                                                        > words
y,(008c.0)e,(008c.1)l,(008c.2)l,(008c.3)o,(0054.0)w,(0022.0)⏎                                                                                                                                                                              > yellow
Έ,(0090.0)Ὴ,(0090.3)Ή,(0090.5)ῌ,(0090.8)῍,(0090.b)῎,(0090.e)῏,(0090.11)ῐ,(0022.0)⏎                                                                                                                                                         > ΈῊΉῌ῍῎῏ῐ
ά,(0094.0)ὲ,(0094.3)έ,(0094.5)ὴ,(0094.8)ή,(0094.a)ὶ,(0094.d)ί,(0094.f)ὸ,(0022.0)⏎                                                                                                                                                          > άὲέὴήὶίὸ
ό,(0099.1)ὺ,(0099.4)ύ,(0099.6)ὼ,(0099.9)ώ,(0099.b)὾,(0099.e)὿,(0099.11)ᾀ,(0022.0)⏎                                                                                                                                                         > όὺύὼώ὾὿ᾀ
ພ,(009b.2)າ,(009b.5)ສ,(009b.8)າ,(009b.b)ລ,(009b.e)າ,(009b.11)ວ,(0022.0)⏎                                                                                                                                                                   > ພາສາລາວ
ት,(009f.1)ግ,(009d.0)ር,(009d.3)ኛ,(0022.0)⏎                                                                                                                                                                                                  > ትግርኛ
አ,(00a1.1)ማ,(009d.0)ር,(009d.3)ኛ,(0022.0)⏎                                                                                                                                                                                                  > አማርኛ
ᐃ,(00a3.0)ᓄ,(00a3.3)ᒃ,(00a3.6)ᑎ,(00a3.9)ᑐ,(00a3.c)ᑦ,(0022.0)⏎                                                                                                                                                                              > ᐃᓄᒃᑎᑐᑦ
ᐊ,(00a5.0)ᓂ,(00a5.3)ᔑ,(00a5.6)ᓈ,(00a5.9)ᐯ,(00a5.c)ᒧ,(00a5.f)ᐎ,(00a5.12)ᓐ,(0022.0)⏎                                                                                                                                                         > ᐊᓂᔑᓈᐯᒧᐎᓐ
ᓀ,(00aa.1)ᐦ,(00aa.4)ᐃ,(00aa.7)ᔭ,(00aa.a)ᐍ,(00aa.d)ᐏ,(00aa.10)ᐣ,(0022.0)⏎                                                                                                                                                                   > ᓀᐦᐃᔭᐍᐏᐣ
ἁ,(00ae.0)ἂ,(00ae.3)ἃ,(00ae.6)ἄ,(00ae.9)ἅ,(00ae.c)ἆ,(00ae.f)ἇ,(00ae.12)Ἀ,(0022.0)⏎                                                                                                                                                         > ἁἂἃἄἅἆἇἈ
Ἁ,(00b0.0)Ἂ,(00b0.3)Ἃ,(00b0.6)Ἄ,(00b0.9)Ἅ,(00b0.c)Ἆ,(00b0.f)Ἇ,(00b0.12)ἐ,(0022.0)⏎                                                                                                                                                         > ἉἊἋἌἍἎἏἐ
ἑ,(00b4.0)ἒ,(00b4.3)ἓ,(00b4.6)ἔ,(00b4.9)ἕ,(00b4.c)἖,(00b4.f)἗,(00b4.12)Ἐ,(0022.0)⏎                                                                                                                                                         > ἑἒἓἔἕ἖἗Ἐ
Ἑ,(00b8.0)Ἒ,(00b8.3)Ἓ,(00b8.6)Ἔ,(00b8.9)Ἕ,(00b8.c)἞,(00b8.f)἟,(00b8.12)ἠ,(0022.0)⏎                                                                                                                                                         > ἙἚἛἜἝ἞἟ἠ
ἡ,(00bc.0)ἢ,(00bc.3)ἣ,(00bc.6)ἤ,(00bc.9)ἥ,(00bc.c)ἦ,(00bc.f)ἧ,(00bc.12)Ἠ,(0022.0)⏎                                                                                                                                                         > ἡἢἣἤἥἦἧἨ
Ἡ,(00c0.0)Ἢ,(00c0.3)Ἣ,(00c0.6)Ἤ,(00c0.9)Ἥ,(00c0.c)Ἦ,(00c0.f)Ἧ,(00c0.12)ἰ,(0022.0)⏎                                                                                                                                                         > ἩἪἫἬἭἮἯἰ
ἱ,(00c2.0)ἲ,(00c2.3)ἳ,(00c2.6)ἴ,(00c2.9)ἵ,(00c2.c)ἶ,(00c2.f)ἷ,(00c2.12)Ἰ,(0022.0)⏎                                                                                                                                                         > ἱἲἳἴἵἶἷἸ
Ἱ,(00c4.0)Ἲ,(00c4.3)Ἳ,(00c4.6)Ἴ,(00c4.9)Ἵ,(00c4.c)Ἶ,(00c4.f)Ἷ,(00c4.12)ὀ,(0022.0)⏎                                                                                                                                                         > ἹἺἻἼἽἾἿὀ
ὁ,(00cf.0)ὂ,(00cf.3)ὃ,(00cf.6)ὄ,(00cf.9)ὅ,(00cf.c)὆,(00cf.f)὇,(00cf.12)Ὀ,(0022.0)⏎                                                                                                                                                         > ὁὂὃὄὅ὆὇Ὀ
Ὁ,(00d1.0)Ὂ,(00d1.3)Ὃ,(00d1.6)Ὄ,(00d1.9)Ὅ,(00d1.c)὎,(00d1.f)὏,(00d1.12)ὐ,(0022.0)⏎                                                                                                                                                         > ὉὊὋὌὍ὎὏ὐ
ὑ,(00d3.0)ὒ,(00d3.3)ὓ,(00d3.6)ὔ,(00d3.9)ὕ,(00d3.c)ὖ,(00d3.f)ὗ,(00d3.12)὘,(0022.0)⏎                                                                                                                                                         > ὑὒὓὔὕὖὗ὘
Ὑ,(00d5.0)὚,(00d5.3)Ὓ,(00d5.6)὜,(00d5.9)Ὕ,(00d5.c)὞,(00d5.f)Ὗ,(00d5.12)ὠ,(0022.0)⏎                                                                                                                                                         > Ὑ὚Ὓ὜Ὕ὞Ὗὠ
ὡ,(00d7.0)ὢ,(00d7.3)ὣ,(00d7.6)ὤ,(00d7.9)ὥ,(00d7.c)ὦ,(00d7.f)ὧ,(00d7.12)Ὠ,(0022.0)⏎                                                                                                                                                         > ὡὢὣὤὥὦὧὨ
Ὡ,(00d9.0)Ὢ,(00d9.3)Ὣ,(00d9.6)Ὤ,(00d9.9)Ὥ,(00d9.c)Ὦ,(00d9.f)Ὧ,(00d9.12)ὰ,(0022.0)⏎                                                                                                                                                         > ὩὪὫὬὭὮὯὰ
ᾁ,(00e2.0)ᾂ,(00e2.3)ᾃ,(00e2.6)ᾄ,(00e2.9)ᾅ,(00e2.c)ᾆ,(00e2.f)ᾇ,(00e2.12)ᾈ,(0022.0)⏎                                                                                                                                                         > ᾁᾂᾃᾄᾅᾆᾇᾈ
ᾉ,(00e4.0)ᾊ,(00e4.3)ᾋ,(00e4.6)ᾌ,(00e4.9)ᾍ,(00e4.c)ᾎ,(00e4.f)ᾏ,(00e4.12)ᾐ,(0022.0)⏎                                                                                                                                                         > ᾉᾊᾋᾌᾍᾎᾏᾐ
ᾑ,(00e6.0)ᾒ,(00e6.3)ᾓ,(00e6.6)ᾔ,(00e6.9)ᾕ,(00e6.c)ᾖ,(00e6.f)ᾗ,(00e6.12)ᾘ,(0022.0)⏎                                                                                                                                                         > ᾑᾒᾓᾔᾕᾖᾗᾘ
ᾙ,(00e8.0)ᾚ,(00e8.3)ᾛ,(00e8.6)ᾜ,(00e8.9)ᾝ,(00e8.c)ᾞ,(00e8.f)ᾟ,(00e8.12)ᾠ,(0022.0)⏎                                                                                                                                                         > ᾙᾚᾛᾜᾝᾞᾟᾠ
ᾡ,(00ea.0)ᾢ,(00ea.3)ᾣ,(00ea.6)ᾤ,(00ea.9)ᾥ,(00ea.c)ᾦ,(00ea.f)ᾧ,(00ea.12)ᾨ,(0022.0)⏎                                                                                                                                                         > ᾡᾢᾣᾤᾥᾦᾧᾨ
ᾩ,(00ec.0)ᾪ,(00ec.3)ᾫ,(00ec.6)ᾬ,(00ec.9)ᾭ,(00ec.c)ᾮ,(00ec.f)ᾯ,(00ec.12)ᾰ,(0022.0)⏎                                                                                                                                                         > ᾩᾪᾫᾬᾭᾮᾯᾰ
ᾱ,(00ee.0)ᾲ,(00ee.3)ᾳ,(00ee.6)ᾴ,(00ee.9)᾵,(00ee.c)ᾶ,(00ee.f)ᾷ,(00ee.12)Ᾰ,(0022.0)⏎                                                                                                                                                         > ᾱᾲᾳᾴ᾵ᾶᾷᾸ
Ᾱ,(00f0.0)Ὰ,(00f0.3)Ά,(00f0.5)ᾼ,(00f0.8)᾽,(00f0.b)ι,(00f0.d)᾿,(00f0.10)῀,(0022.0)⏎                                                                                                                                                         > ᾹᾺΆᾼ᾽ι᾿῀
῁,(00fb.0)ῂ,(00fb.3)ῃ,(00fb.6)ῄ,(00fb.9)῅,(00fb.c)ῆ,(00fb.f)ῇ,(00fb.12)Ὲ,(0022.0)⏎                                                                                                                                                         > ῁ῂῃῄ῅ῆῇῈ
ῑ,(00fd.0)ῒ,(00fd.3)ΐ,(00fd.5)῔,(00fd.8)῕,(00fd.b)ῖ,(00fd.e)ῗ,(00fd.11)Ῐ,(0022.0)⏎                                                                                                                                                         > ῑῒΐ῔῕ῖῗῘ
Ῑ,(00ff.0)Ὶ,(00ff.3)Ί,(00ff.5)῜,(00ff.8)῝,(00ff.b)῞,(00ff.e)῟,(00ff.11)ῠ,(0022.0)⏎                                                                                                                                                         > ῙῚΊ῜῝῞῟ῠ
ῡ,(0101.0)ῢ,(0101.3)ΰ,(0101.5)ῤ,(0101.8)ῥ,(0101.b)ῦ,(0101.e)ῧ,(0101.11)Ῠ,(0022.0)⏎                                                                                                                                                         > ῡῢΰῤῥῦῧῨ
Ῡ,(0103.0)Ὺ,(0103.3)Ύ,(0103.5)Ῥ,(0103.8)῭,(0103.b)΅,(0103.d)\`,(0103.e)῰,(0022.0)⏎                                                                                                                                                          > ῩῪΎῬ῭΅\`῰
῱,(0105.0)ῲ,(0105.3)ῳ,(0105.6)ῴ,(0105.9)῵,(0105.c)ῶ,(0105.f)ῷ,(0105.12)Ὸ,(0022.0)⏎                                                                                                                                                         > ῱ῲῳῴ῵ῶῷῸ
ꦧ,(0117.2)ꦱ,(0117.5)ꦗ,(0117.8)ꦮ,(0022.0)⏎                                                                                                                                                                                                  > ꦧꦱꦗꦮ
😀,(0119.0)😃,(0119.4)😄,(0119.8)😁,(0119.c)😆,(0119.10)🥹,(0119.14)😅,(0119.18)😂,(0119.1c)🤣,(0119.20)🥲,(0119.24)☺,(0119.27)️,(0119.2a)😊,(0119.2e)😇,(0119.32)🙂,(0119.36)🙃,(0119.3a)😉,(0022.0)⏎                                     > 😀😃😄😁😆🥹😅😂🤣🥲☺️😊😇🙂🙃😉
😌,(011b.0)😍,(011b.4)🥰,(011b.8)😘,(011b.c)😗,(011b.10)😙,(011b.14)😚,(011b.18)😋,(011b.1c)😛,(011b.20)😝,(011b.24)😜,(011b.28)🤪,(011b.2c)🤨,(011b.30)🧐,(011b.34)🤓,(011b.38)😎,(0022.0)⏎                                               > 😌😍🥰😘😗😙😚😋😛😝😜🤪🤨🧐🤓😎
😢,(011d.0)😭,(011d.4)😤,(011d.8)😠,(011d.c)😡,(011d.10)🤬,(011d.14)🤯,(011d.18)😳,(011d.1c)🥵,(011d.20)🥶,(011d.24)😶,(011d.28)‍,(011d.2b)🌫,(011d.2f)️,(011d.32)😱,(011d.36)😨,(011d.3a)😰,(011d.3e)😥,(011d.42)😓,(0022.0)⏎             > 😢😭😤😠😡🤬🤯😳🥵🥶😶‍🌫️😱😨😰😥😓
🙄,(0123.1)😯,(0123.5)😦,(0123.9)😧,(0123.d)😮,(0123.11)😲,(0123.15)🥱,(0123.19)😴,(0123.1d)🤤,(0123.21)😪,(0123.25)😮,(0123.29)‍,(0123.2c)💨,(0123.30)😵,(0123.34)😵,(0123.38)‍,(0123.3b)💫,(0123.3f)🤐,(0123.43)🥴,(0123.47)🤢,(0022.0)⏎ > 🙄😯😦😧😮😲🥱😴🤤😪😮‍💨😵😵‍💫🤐🥴🤢
🤗,(0125.0)🤔,(0125.4)🫣,(0125.8)🤭,(0125.c)🫢,(0125.10)🫡,(0125.14)🤫,(0125.18)🫠,(0125.1c)🤥,(0125.20)😶,(0125.24)🫥,(0125.28)😐,(0125.2c)🫤,(0125.30)😑,(0125.34)🫨,(0125.38)😬,(0022.0)⏎                                               > 🤗🤔🫣🤭🫢🫡🤫🫠🤥😶🫥😐🫤😑🫨😬
🤮,(0127.0)🤧,(0127.4)😷,(0127.8)🤒,(0127.c)🤕,(0127.10)🤑,(0127.14)🤠,(0127.18)😈,(0022.0)⏎                                                                                                                                               > 🤮🤧😷🤒🤕🤑🤠😈
🥸,(012c.1)🤩,(012c.5)🥳,(012c.9)😏,(012c.d)😒,(012c.11)😞,(012c.15)😔,(012c.19)😟,(012c.1d)😕,(012c.21)🙁,(012c.25)☹,(012c.28)️,(012c.2b)😣,(012c.2f)😖,(012c.33)😫,(012c.37)😩,(012c.3b)🥺,(0022.0)⏎                                     > 🥸🤩🥳😏😒😞😔😟😕🙁☹️😣😖😫😩🥺"
`;

exports[`optimization > optimize 'single word' [ 'optimization' ] > No optimization 1`] = `"o,(0003.0)p,(0005.0)t,(0007.0)i,(0009.0)m,(000b.0)i,(000d.0)z,(000f.0)a,(0011.0)t,(0013.0)i,(0015.0)o,(0017.0)n,(0002.0)⏎ > optimization"`;

exports[`optimization > optimize 'single word' [ 'optimization' ] > With optimization 1`] = `"o,(0017.0)p,(0015.0)t,(0013.0)i,(0011.0)m,(000f.0)i,(000d.0)z,(000b.0)a,(0009.0)t,(0007.0)i,(0005.0)o,(0003.0)n,(0002.0)⏎ > optimization"`;

exports[`optimization > optimize 'single word' [ 'optimization' ] > With optimization and string table 1`] = `"o,(0000.1)p,(0000.2)t,(0000.3)i,(0000.4)m,(0000.5)i,(0000.6)z,(0000.7)a,(0000.8)t,(0000.9)i,(0000.a)o,(0000.b)n,(0000.c)⏎ > optimization"`;
